--- a/index.mjml
+++ b/index.mjml
@@ -13,30 +13,41 @@
       </mj-column>
     </mj-section>
     <mj-section>
-        <mj-column>
-            <mj-text>Order Information</mj-text>
-            <mj-divider  />
-            <mj-text>Order ID</mj-text>
-            <mj-text>1234</mj-text>
-            <mj-text>Order Date:</mj-text>
-            <mj-text>25 September 2021</mj-text>
-            <mj-text>Invoice:</mj-text>
-            <mj-text>Avalable at the <a href="">Order portal</a></mj-text>
-            <mj-text>Pasword:</mj-text>
-            <mj-text>W56abGKs7</mj-text>
-        </mj-column>
-        <mj-column>
-            <mj-text>Billing Address</mj-text>
-            <mj-divider  />
-            <mj-text>Name:</mj-text>
-            <mj-text>Magnus Rydberg</mj-text>
-            <mj-text>Address:</mj-text>
-            <mj-text>Socharska 654 / 9</mj-text>
-            <mj-text>Praha 7</mj-text>
-            <mj-text>CZ</mj-text>
-            <mj-text>Email:</mj-text>
-            <mj-text>hello@goodbye.com</mj-text>
-        </mj-column>
+      <mj-column>
+        <mj-text>Order Information</mj-text>
+        <mj-divider />
+        <mj-text>Order ID</mj-text>
+        <mj-text>1234</mj-text>
+        <mj-text>Order Date:</mj-text>
+        <mj-text>25 September 2021</mj-text>
+        <mj-text>Invoice:</mj-text>
+        <mj-text>Avalable at the <a href="">Order portal</a></mj-text>
+        <mj-text>Pasword:</mj-text>
+        <mj-text>W56abGKs7</mj-text>
+        <mj-text>You will need the password to log in to the <a href="">Order portal</a> to check details of your order.</mj-text>
+      </mj-column>
+      <mj-column>
+        <mj-text>Billing Address</mj-text>
+        <mj-divider />
+        <mj-text>Name:</mj-text>
+        <mj-text>Magnus Rydberg</mj-text>
+        <mj-text>Address:</mj-text>
+        <mj-text>Socharska 654 / 9</mj-text>
+        <mj-text>Praha 7</mj-text>
+        <mj-text>CZ</mj-text>
+        <mj-text>Email:</mj-text>
+        <mj-text>hello@goodbye.com</mj-text>
+      </mj-column>
     </mj-section>
+    <mj-section>
+      <mj-column>
+        <mj-text>Products in Your Order</mj-text>
+        <mj-text>Product SKU: ABC-63-003-55-MR</mj-text>
+        <mj-text>Product Name: TK Internet Security</mj-text>
+        <mj-text>QTY: Ordered: 1</mj-text>
+        <mj-text>Amount 65,99 €</mj-text>
+      </mj-column>
+    </mj-section>
+
   </mj-body>
 </mjml>
