--- a/index.mjml
+++ b/index.mjml
@@ -3,6 +3,8 @@
     <mj-title></mj-title>
     <mj-attributes>
       <mj-preview>Malware Mauler - Order Confirmation (Order #12345678)</mj-preview>
+      <mj-divider border-color="#999999" border-width="2px" />
+      <mj-class name="subtle-header" font-size="15px" font-weight="600" />
     </mj-attributes>
   </mj-head>
   <mj-body background-color="#cccccc">
@@ -11,11 +13,11 @@
         <mj-column>
           <mj-text>Magnus Rydberg, thank you for becoming a Malware Mauler customer</mj-text>
           <mj-text>Here is a summary of your order toghether with links to installaltion of Malware Mauler.</mj-text>
-        </mj-column>
+
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text>Order Information</mj-text>
+          <mj-text mj-class="subtle-header">Order Information</mj-text>
           <mj-divider />
           <mj-text>Order ID</mj-text>
           <mj-text>1234</mj-text>
@@ -28,7 +30,7 @@
           <mj-text>You will need the password to log in to the <a href="">Order portal</a> to check details of your order.</mj-text>
         </mj-column>
         <mj-column>
-          <mj-text>Billing Address</mj-text>
+          <mj-text mj-class="subtle-header">Billing Address</mj-text>
           <mj-divider />
           <mj-text>Name:</mj-text>
           <mj-text>Magnus Rydberg</mj-text>
@@ -42,7 +44,7 @@
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text>Products in Your Order</mj-text>
+          <mj-text mj-class="subtle-header" >Products in Your Order</mj-text>
           <mj-divider />
           <mj-text>Product SKU: ABC-63-003-55-MR</mj-text>
           <mj-text>Product Name: TK Internet Security</mj-text>
@@ -60,14 +62,14 @@
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text>Payment Information</mj-text>
+          <mj-text mj-class="subtle-header">Payment Information</mj-text>
           <mj-divider />
           <mj-text>If you paid by credit card, please look for DRI*MALWM on your credit card billing statement.</mj-text>
         </mj-column>
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text>Installation</mj-text>
+          <mj-text mj-class="subtle-header">Installation</mj-text>
           <mj-divider />
           <mj-text>Download the installation file from the following URL: <a href="#">http://files.mawaremauler.com/version6.3/setup.exe</a> </mj-text>
           <mj-text>Follow the step-by_step installation instuctions : <a href="#">Malware Mauler Installation in 8 steps</a> </mj-text>
@@ -76,13 +78,13 @@
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text>Stay in touch</mj-text>
+          <mj-text mj-class="subtle-header">Stay in touch</mj-text>
           <mj-divider />
           <mj-text>Social Placeholder</mj-text>
           <mj-text>Best regards</mj-text>
           <mj-text>Malware Mauler Software Customer Service</mj-text>
           <mj-text><a href="#">malwaremauler.com/support</a></mj-text>
-          <mj-text>Please note: This email message was sent notification-only address that cannot accept incoming email. Please do not reply to this message.</mj-text>
+          <mj-text>Please note: This email message was sent from a notification-only address that cannot accept incoming email. Please do not reply to this message.</mj-text>
         </mj-column>
       </mj-section>
     </mj-wrapper>
