--- a/index.mjml
+++ b/index.mjml
@@ -2,98 +2,135 @@
   <mj-head>
     <mj-title></mj-title>
     <mj-attributes>
+      <!-- mjml attributes   -->
       <mj-preview>Malware Mauler - Order Confirmation (Order #12345678)</mj-preview>
       <mj-divider padding-top="0px" border-color="#999999" border-width="2px" />
-      <mj-class name="distinct-header" font-size="15px" font-weight="600" color="#111111"/>
-      <mj-class name="subtle-header" font-size="14px" font-weight="600" color="#555555"/>
-      <mj-class name="basic-text" font-size="14px"  color="#555555"/>
+      <mj-text padding-top="0px" padding-bottom="0px" />
+      <!-- mjml classes   -->
+      <mj-class name="distinct" color="#111111" />
+      <mj-class name="subtle" color="#555555" />
+      <mj-class name="footnote" font-size="12px" color="#555555" />
     </mj-attributes>
+    <mj-style inline="inline">
+      h1 {
+        font-size: 15px;
+        padding-top: 0px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+        padding-left: 20px;
+      }
+
+      h2 {
+        color: rgb(15, 104, 54);
+        font-size: 15px;
+      }
+
+      a {
+        color: #0000ee;
+      }
+    </mj-style>
   </mj-head>
   <mj-body background-color="#cccccc">
     <mj-wrapper background-color="#ffffff">
       <mj-section>
         <mj-column>
-          <mj-text padding-left="20%"  padding-left="20%" align="center" mj-class="distinct-header">Magnus Rydberg, thank you for becoming a Malware Mauler customer</mj-text>
-          <mj-text>Here is a summary of your order toghether with links to installaltion of Malware Mauler.</mj-text>
-
+          <mj-text align="center">
+            <h1>Magnus Rydberg, thank you for becoming a Malware&nbsp;Mauler customer</h1>
+          </mj-text>
+          <mj-text mj-class="distinct">
+            Here is a summary of your order toghether with links to installaltion of Malware&nbsp;Mauler.
+          </mj-text>
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text mj-class="distinct-header">Order Information</mj-text>
+          <mj-text mj-class="distinct">
+            <h2>Order Information</h2>
+          </mj-text>
           <mj-divider />
-          <mj-text mj-class="subtle-header">Order ID</mj-text>
-          <mj-text mj-class="basic-text">1234</mj-text>
-          <mj-text mj-class="subtle-header">Order Date:</mj-text>
-          <mj-text mj-class="basic-text" >25 September 2021</mj-text>
-          <mj-text mj-class="subtle-header">Invoice:</mj-text>
-          <mj-text mj-class="basic-text">Available at the <a href="">Order portal</a></mj-text>
-          <mj-text mj-class="subtle-header">Password:</mj-text>
-          <mj-text mj-class="basic-text">W56abGKs7</mj-text>
-          <mj-text>You will need the password to log in to the <a href="">Order portal</a> to check details of your order.</mj-text>
+          <mj-text mj-class="distinct">Order ID</mj-text>
+          <mj-text mj-class="subtle">1234</mj-text>
+          <mj-text mj-class="distinct">Order Date:</mj-text>
+          <mj-text mj-class="subtle">25 September 2021</mj-text>
+          <mj-text mj-class="distinct">Invoice:</mj-text>
+          <mj-text mj-class="subtle">Available at the <a href="">Order portal</a></mj-text>
+          <mj-text mj-class="distinct">Password:</mj-text>
+          <mj-text mj-class="subtle">W56abGKs7</mj-text>
+          <mj-text mj-class="footnote">You will need the password to log in to the <a href="">Order portal</a> to check details of your order.</mj-text>
         </mj-column>
         <mj-column>
-          <mj-text mj-class="distinct-header">Billing Address</mj-text>
+          <mj-text>
+            <h2>
+              Billing Address
+            </h2>
+          </mj-text>
           <mj-divider />
-          <mj-text mj-class="subtle-header">Name:</mj-text>
-          <mj-text>Magnus Rydberg</mj-text>
-          <mj-text mj-class="subtle-header">Address:</mj-text>
-          <mj-text>Socharska 654 / 9</mj-text>
-          <mj-text>Praha 7</mj-text>
-          <mj-text>CZ</mj-text>
-          <mj-text mj-class="subtle-header">Email:</mj-text>
-          <mj-text>hello@goodbye.com</mj-text>
-        </mj-column>
-      </mj-section>
-      <mj-section>
-        <mj-column>
-          <mj-text mj-class="distinct-header" >Products in Your Order</mj-text>
-          <mj-divider />
-          <mj-text>Product SKU: ABC-63-003-55-MR</mj-text>
-          <mj-text>Product Name: Malware Mauler Internet Security PC, 1 year subscription</mj-text>
-          <mj-text>QTY: Ordered: 1</mj-text>
-          <mj-text>Amount 65,21 €</mj-text>
-        </mj-column>
-      </mj-section>
-      <mj-section>
-        <mj-column>
-          <mj-text>Subtotal: 85,21 €</mj-text>
-          <mj-text>Discount: -20 €</mj-text>
-          <mj-text>VAT: 9,78 €</mj-text>
-          <mj-text mj-class="subtle-header">Total prize: 74,99</mj-text>
+          <mj-text mj-class="distinct">Name:</mj-text>
+          <mj-text mj-class="subtle">Magnus Rydberg</mj-text>
+          <mj-text mj-class="distinct">Address:</mj-text>
+          <mj-text mj-class="subtle">Sochařská 512 / 7</mj-text>
+          <mj-text mj-class="subtle">Praha 170 00</mj-text>
+          <mj-text mj-class="subtle">CZ</mj-text>
+          <mj-text mj-class="distinct">Email:</mj-text>
+          <mj-text mj-class="subtle">Magnus Rydberg</mj-text>
         </mj-column>
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text mj-class="distinct-header">Payment Information</mj-text>
+          <mj-text>
+            <h2>Products in your order</h2>
+          </mj-text>
           <mj-divider />
-          <mj-text>If you paid by credit card, please look for DRI*MALWM on your credit card billing statement.</mj-text>
+          <mj-text mj-class="subtle">Product SKU: ABC-63-003-55-MR</mj-text>
+          <mj-text mj-class="subtle">Product Name: Malware Mauler Internet Security PC, 1 year subscription</mj-text>
+          <mj-text mj-class="subtle">QTY: Ordered: 1</mj-text>
+          <mj-text mj-class="subtle">Amount 65,21 €</mj-text>
         </mj-column>
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text mj-class="distinct-header">Installation</mj-text>
-          <mj-divider />
-          <mj-text>Download the installation file from the following URL: <a href="#">http://files.mawaremauler.com/version6.3/setup.exe</a> </mj-text>
-          <mj-text>Follow the step-by_step installation instuctions : <a href="#">Malware Mauler Installation in 8 steps</a> </mj-text>
-          tep-by- ste
+          <mj-text mj-class="subtle">Subtotal: 85,21 €</mj-text>
+          <mj-text mj-class="subtle">Discount: -20 €</mj-text>
+          <mj-text mj-class="subtle">VAT: 9,78 €</mj-text>
+          <mj-text mj-class="distinct">Total prize: 74,99</mj-text>
         </mj-column>
       </mj-section>
       <mj-section>
         <mj-column>
-          <mj-text mj-class="distinct-header">Stay in touch</mj-text>
+          <mj-text>
+            <h2>Payment Information</h2>
+          </mj-text>
           <mj-divider />
-          <mj-text>Social Placeholder</mj-text>
-          <mj-text>Best regards</mj-text>
-          <mj-text>Malware Mauler Software Customer Service</mj-text>
+          <mj-text mj-class="subtle">If you paid by credit card, please look for DRI*MALWM Software on your credit card billing statement.</mj-text>
+        </mj-column>
+      </mj-section>
+      <mj-section>
+        <mj-column>
+          <mj-text>
+            <h2>Installation</h2>
+          </mj-text>
+          <mj-divider />
+          <mj-text mj-class="subtle">Download the installation file from the following URL: <a href="#">http://files.mawaremauler.com/version6.3/setup.exe</a> </mj-text>
+          <mj-text mj-class="subtle">Follow the step-by_step installation instuctions : <a href="#">Malware Mauler Installation in 8 steps</a> </mj-text>
+        </mj-column>
+      </mj-section>
+      <mj-section>
+        <mj-column>
+          <mj-text>
+            <h2>Stay in touch</h2>
+          </mj-text>
+          <mj-divider />
+          <mj-text mj-class="subtle">Social Placeholder</mj-text>
+          <mj-text mj-class="subtle">Best regards</mj-text>
+          <mj-text mj-class="subtle">Malware Mauler Software Customer Service</mj-text>
           <mj-text><a href="#">malwaremauler.com/support</a></mj-text>
-          <mj-text>Please note: This email message was sent from a notification-only address that cannot accept incoming email. Please do not reply to this message.</mj-text>
+          <mj-text mj-class="footnote">Please note: This email message was sent from a notification-only address that cannot accept incoming email. Please do not reply to this message.</mj-text>
         </mj-column>
       </mj-section>
     </mj-wrapper>
     <mj-section>
       <mj-column>
-        <mj-text>
-          Footer placeholder
+        <mj-text mj-class="footnote">
+          Malware Mauler Software s.r.o., Karla Engliše 2332/3b, 150 00, Prague 5, Czech Republic
         </mj-text>
       </mj-column>
     </mj-section>
